EksConfig 리팩토링